setup-scripts/50-oda-canvas/canvas-keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canvas-keycloak-ingress
  namespace: canvas
  #annotations:
  #  cert-manager.io/cluster-issuer: letsencrypt-production  
  labels:
    app: canvas-keycloak
spec:
  ingressClassName: nginx
  #tls:
  #  - secretName: canvas-keycloak-ssl
  #    hosts:
  #    - keycloak.vps-2.cluster-4.de              
  rules:
  - host: "keycloak.vps-2.cluster-4.de"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: canvas-keycloak
              port:
                number: 8088
